--- a/{{cookiecutter.project_slug}}/templates/template.html
+++ b/{{cookiecutter.project_slug}}/templates/template.html
@@ -1,3 +1,4 @@
+{% raw %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,4 +9,4 @@
   <p>This is a rendered template using Nunjucks.</p>
 </body>
 </html>
-
+{% endraw %}
